# kem-courier

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: crypto-agility.md  envelope-format.md  threat-model.md
docs/architecture/: ai-pqc-trust-gateway.md
docs/azure/: azure-reference-architecture.md  deployment-hardening.md
docs/controls/: ai-pqc-control-mapping.md
examples/: README.md  ai-trust-policy.example.yaml  allowed-ai-request.example.json  enterprise-policy.example.yaml  malicious-ai-request.example.json  revoked-keys.example.json
examples/azure/: allowed-foundry-request.example.json  azure-ai-foundry-policy.example.yaml
infra/azure/: README.md  main.bicep
scripts/: demo-ai-pqc.sh  demo.sh
src/: main.rs
tests/: cli_integration.rs
