[package]
name = "kem-courier"
version = "0.1.0"
edition = "2024"
description = "CLI-first post-quantum secure file exchange prototype with enterprise PAM-style controls"
license = "MIT OR Apache-2.0"
repository = "https://github.com/criticalberne/kem-courier"
readme = "README.md"
keywords = ["post-quantum", "ml-kem", "ml-dsa", "file-encryption", "pam"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
argon2 = "0.5"
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
getrandom = "0.3"
hkdf = "0.12"
ml-dsa = { version = "0.1", features = ["getrandom", "zeroize"] }
ml-kem = { version = "0.3", features = ["getrandom", "zeroize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
